LPS-107597 Build lang

--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ca.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Assigna organitzacions a {0}
 assign-parent-account=Assigna un compte pare
 assign-users-to-x=Assigna usuaris a {0}
 current-account-users=Usuaris del compte actual
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtra per comptes
 filter-by-type=Filtra per tipus
 for-multiple-domains,-separate-each-domain-by-a-comma=Per a diversos dominis, separeu cada domini amb una coma.
@@ -46,8 +47,10 @@ select-an-account=Seleccioneu un compte
 showing-users-with-valid-domains-only=Només es mostren els usuaris amb dominis vàlids. Per veure tots els usuaris, utilitzeu el filtre per actualitzar la llista.
 tax-id=ID fiscal
 tax-id-help=Introduïu l'identificador fiscal del compte (NIF, número d'IVA, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=No hi ha organitzacions associades a aquest compte.
 there-are-no-roles=No hi ha rols.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=No hi ha usuaris associats a aquest compte.
 there-are-no-users-associated-with-this-role=No hi ha usuaris associats a aquest rol.
 this-account-does-not-have-a-parent-account=Aquest compte no té un compte pare.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Aquest compte no té un domini vàlid.
 this-user-does-not-belong-to-any-accounts=Aquest usuari no pertany a cap compte.
 user-display-data=Dades de visualització de l'usuari
 valid-domains=Dominis vàlids
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
