--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_de.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Organisationen {0} zuweisen
 assign-parent-account=Übergeordnetes Konto zuweisen
 assign-users-to-x=Benutzer {0} zuweisen
 current-account-users=Aktuelle Kontobenutzer
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Nach Konten filtern
 filter-by-type=Nach Typ filtern
 for-multiple-domains,-separate-each-domain-by-a-comma=Bei mehreren Domains trennen Sie diese bitte durch ein Komma.
@@ -46,8 +47,10 @@ select-an-account=Wählen Sie ein Konto
 showing-users-with-valid-domains-only=Es werden nur Benutzer mit gültigen Domains angezeigt. Verwenden Sie Filter für die Aktualisierung der Liste, um alle Benutzer anzuzeigen.
 tax-id=Steuer-ID
 tax-id-help=Geben Sie die Steuer-ID des Kontos ein (Arbeitgeberkennnummer, USt.-Nummer etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Mit diesem Konto sind keine Organisationen verbunden.
 there-are-no-roles=Es gibt keine Rollen.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Mit diesem Konto sind keine Benutzer verbunden.
 there-are-no-users-associated-with-this-role=Mit dieser Rolle sind keine Benutzer verbunden.
 this-account-does-not-have-a-parent-account=Dieses Konto hat kein übergeordnetes Konto.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Dieses Konto hat keine gültige Domain
 this-user-does-not-belong-to-any-accounts=Dieser Benutzer gehört keinen Konten an.
 user-display-data=Benutzer-Anzeigedaten
 valid-domains=Gültige Domains
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
