--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_en.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_en.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Assign Organizations to {0}
 assign-parent-account=Assign Parent Account
 assign-users-to-x=Assign Users to {0}
 current-account-users=Current Account Users
+domain-name=Domain Name
 filter-by-accounts=Filter by Accounts
 filter-by-type=Filter by Type
 for-multiple-domains,-separate-each-domain-by-a-comma=For multiple domains, separate each domain by a comma.
@@ -46,8 +47,10 @@ select-an-account=Select an Account
 showing-users-with-valid-domains-only=Showing users with valid domains only. To see all users, use filter to update the list.
 tax-id=Tax ID
 tax-id-help=Enter the account's tax ID (EIN, VAT number, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts.
 there-are-no-organizations-associated-with-this-account=There are no organizations associated with this account.
 there-are-no-roles=There are no roles.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts.
 there-are-no-users-associated-with-this-account=There are no users associated with this account.
 there-are-no-users-associated-with-this-role=There are no users associated with this role.
 this-account-does-not-have-a-parent-account=This account does not have a parent account.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=This account does not have a valid dom
 this-user-does-not-belong-to-any-accounts=This user does not belong to any accounts.
 user-display-data=User Display Data
 valid-domains=Valid Domains
+view-valid-domains=View Valid Domains
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}.
