--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fr.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Assigner des organisations à {0}
 assign-parent-account=Assigner un compte parent
 assign-users-to-x=Assigner les utilisateurs à {0}
 current-account-users=Utilisateurs du compte courant
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtrer par comptes
 filter-by-type=Filtrer par type
 for-multiple-domains,-separate-each-domain-by-a-comma=Si plusieurs domaines il y a, séparez-les d'une virgule.
@@ -46,8 +47,10 @@ select-an-account=Sélectionner un compte
 showing-users-with-valid-domains-only=Affichage des utilisateurs avec des domaines valides uniquement. Pour voir tous les utilisateurs, utilisez le filtre pour mettre à jour la liste.
 tax-id=ID fiscal
 tax-id-help=Saisissez l'ID fiscal du compte (EIN, numéro de TVA, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Aucune organisation n'est associée à cet compte.
 there-are-no-roles=Il n'y a aucun rôle.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Aucun utilisateur n'est associé à ce compte.
 there-are-no-users-associated-with-this-role=Aucun utilisateur n'est associé à ce rôle.
 this-account-does-not-have-a-parent-account=Ce compte n'a pas de compte parent.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Ce compte n'a pas de domaine valide.
 this-user-does-not-belong-to-any-accounts=Cet utilisateur n'appartient pas à un compte.
 user-display-data=Données d'affichage de l'utilisateur
 valid-domains=Domaines valides
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
