--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_hu.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Szervezetek hozzárendelése: {0}
 assign-parent-account=Fölérendelt fiók hozzárendelése
 assign-users-to-x=Felhasználók hozzárendelése ehhez: {0}
 current-account-users=Jelenlegi fiókfelhasználók
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Szűrés fiókok szerint
 filter-by-type=Szűrés típus szerint
 for-multiple-domains,-separate-each-domain-by-a-comma=Több tartomány esetében válassza el a tartományokat vesszővel.
@@ -46,8 +47,10 @@ select-an-account=Válasszon egy fiókot
 showing-users-with-valid-domains-only=Csak érvényes tartománnyal rendelkező felhasználók vannak megjelenítve. Az összes felhasználó megtekintéséhez a szűrő segítségével frissítse a listát.
 tax-id=Adóazonosító
 tax-id-help=Adja meg a fiók adóazonosítóját (EIN, VAT, ÁFA szám, stb.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Ehhez a fiókhoz nincsenek szervezetek társítva.
 there-are-no-roles=Nincsenek szerepkörök.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Ehhez a fiókhoz nincsenek felhasználók társítva.
 there-are-no-users-associated-with-this-role=Ehhez a szerepkörhöz nincsenek felhasználók társítva.
 this-account-does-not-have-a-parent-account=Ehhez a fiókhoz nem tartozik fölérendelt fiók.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Ehhez a fiókhoz nem tartozik érvény
 this-user-does-not-belong-to-any-accounts=Ez a felhasználó nem tartozik semmilyen fiókhoz.
 user-display-data=A felhasználó megjelenített adatai
 valid-domains=Érvényes tartományok
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
