--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_it.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Assegna organizzazioni a {0}
 assign-parent-account=Assegna un Account Principale
 assign-users-to-x=Aggiunti Utenti a {0}
 current-account-users=Utenti dell'Account Corrente
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtra per Account
 filter-by-type=Filtra per Tipo
 for-multiple-domains,-separate-each-domain-by-a-comma=Per domini multipli, separa ogni dominio con una virgola.
@@ -46,8 +47,10 @@ select-an-account=Seleziona un account
 showing-users-with-valid-domains-only=Mostra solo agli utenti con domini validi. Per vedere tutti gli utenti, utilizzare il filtro per aggiornare l'elenco.
 tax-id=Tax ID
 tax-id-help=Enter the account's tax ID (EIN, VAT number, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Non ci sono organizzazioni associate a questo account.
 there-are-no-roles=There are no roles.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Non ci sono utenti associati a questo account.
 there-are-no-users-associated-with-this-role=Non ci sono utenti associati a questo ruolo.
 this-account-does-not-have-a-parent-account=Questo account non ha un account principale.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Questo account non ha un dominio valid
 this-user-does-not-belong-to-any-accounts=This user does not belong to any accounts.
 user-display-data=Dati di visualizzazione dell'utente
 valid-domains=Domini validi
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
