--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_nb.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Tilordne organisasjoner til {0}
 assign-parent-account=Tildel overordnet konto
 assign-users-to-x=Tildel brukere til {0}
 current-account-users=Gjeldende kontobrukere
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtrér etter kontoer
 filter-by-type=Filter by Type
 for-multiple-domains,-separate-each-domain-by-a-comma=For flere domener, skill hvert domene med komma.
@@ -46,8 +47,10 @@ select-an-account=Velg en konto
 showing-users-with-valid-domains-only=Bare brukere med gyldig domene vises. For å se alle brukere, bruk filteret for å oppdatere listen.
 tax-id=Tax ID
 tax-id-help=Enter the account's tax ID (EIN, VAT number, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Ingen organisasjoner tilordnet denne kontoen.
 there-are-no-roles=There are no roles.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Ingen brukere er tilordnet denne kontoen.
 there-are-no-users-associated-with-this-role=Ingen brukere er tilordnet denne rollen.
 this-account-does-not-have-a-parent-account=Denne kontoen har ikke en overordnet konto.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Denne kontoen har ikke et gyldig domen
 this-user-does-not-belong-to-any-accounts=Denne brukeren tilhører ikke noen kontoer.
 user-display-data=Brukervisningsdata
 valid-domains=Gyldige domener
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
