--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_nl.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Organisaties toewijzen aan {0}
 assign-parent-account=Bovenliggend account toewijzen
 assign-users-to-x=Gebruikers toewijzen aan {0}
 current-account-users=Gebruikers huidig account
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filteren op account
 filter-by-type=Filteren op type
 for-multiple-domains,-separate-each-domain-by-a-comma=Scheid elk domein met een komma als er meerdere domeinen zijn.
@@ -46,8 +47,10 @@ select-an-account=Selecteer een account
 showing-users-with-valid-domains-only=Alleen gebruikers met geldige domeinen worden weergegeven. Werk de lijst bij met de filter om alle gebruikers te zien.
 tax-id=Fiscaal identificatienummer
 tax-id-help=Voer het fiscaal identificatienummer van het account in (EIN, btw-nummer, enz.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Er zijn geen organisaties gekoppeld aan dit account.
 there-are-no-roles=Er zijn geen rollen.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Er zijn geen gebruikers gekoppeld aan dit account.
 there-are-no-users-associated-with-this-role=Er zijn geen gebruikers gekoppeld aan deze rol.
 this-account-does-not-have-a-parent-account=Dit account heeft geen bovenliggend account.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Dit account heeft geen geldig domein.
 this-user-does-not-belong-to-any-accounts=Deze gebruiker behoort niet toe aan een account.
 user-display-data=Dataweergave gebruiker
 valid-domains=Geldige domeinen
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
