--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_pt_BR.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Atribuir Organização a {0}
 assign-parent-account=Atribuir Conta Pai
 assign-users-to-x=Usuários atribuídos a {0}
 current-account-users=Usuários da conta atual
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtrar por Conta
 filter-by-type=Filtrar por tipo
 for-multiple-domains,-separate-each-domain-by-a-comma=Para vários domínios, separar cada domínio por vírgula.
@@ -46,8 +47,10 @@ select-an-account=Selecionar uma conta
 showing-users-with-valid-domains-only=Mostrando apenas usuários com domínios válidos. Para visualizar todos os usuários, use o filtro para atualizar a lista.
 tax-id=ID fiscal
 tax-id-help=Inserir o ID fiscal da conta (EIN, número do VAT, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Não há organizações associadas a este conta.
 there-are-no-roles=Não existem papéis.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Não há usuários associados a este conta.
 there-are-no-users-associated-with-this-role=Não há nenhum usuário associados a esta função.
 this-account-does-not-have-a-parent-account=Esta conta não possui uma conta pai.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Esta conta não possui um domínio vá
 this-user-does-not-belong-to-any-accounts=Esse usuário não pertence a nenhuma conta.
 user-display-data=Dados de Exibição do Usuário
 valid-domains=Domínios válidos
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
