--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_sv.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Tilldela organisationer till {0}
 assign-parent-account=Tilldela överordnat konto
 assign-users-to-x=Tilldela användare till {0}
 current-account-users=Nuvarande kontoanvändare
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtrera efter konton
 filter-by-type=Filtrera efter typ
 for-multiple-domains,-separate-each-domain-by-a-comma=För flera domäner separerar du varje domän med ett kommatecken.
@@ -46,8 +47,10 @@ select-an-account=Välj ett konto
 showing-users-with-valid-domains-only=Visar endast användare med giltiga domäner. Använd filter för att uppdatera listan om du vill se alla användare.
 tax-id=Moms-ID
 tax-id-help=Ange kontots moms-ID (EIN, momsnummer etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Det finns inga organisationer kopplade till det här kontot.
 there-are-no-roles=Det finns inga roller.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Det finns inga användare som är kopplade till det här kontot.
 there-are-no-users-associated-with-this-role=Det finns inga användare som är kopplade till den här rollen.
 this-account-does-not-have-a-parent-account=Det här kontot saknar ett överordnat konto.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Det här kontot saknar en giltig domä
 this-user-does-not-belong-to-any-accounts=Den här användaren tillhör inte något konto.
 user-display-data=Data för användarvisning
 valid-domains=Giltiga domäner
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
