--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_zh_CN.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=将组织分配给 {0}
 assign-parent-account=分配父帐户
 assign-users-to-x=将用户分配到 {0}
 current-account-users=当前帐户用户
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=按帐户筛选
 filter-by-type=按类型筛选
 for-multiple-domains,-separate-each-domain-by-a-comma=对于多个域，使用逗号分隔每个域。
@@ -46,8 +47,10 @@ select-an-account=选择帐户
 showing-users-with-valid-domains-only=仅显示具有有效域的用户。要查看所有用户，请使用筛选器更新列表。
 tax-id=税号
 tax-id-help=输入帐户的税号（EIN、VAT 号码等）。
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=没有组织与此帐户关联。
 there-are-no-roles=没有角色。
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=没有用户与此帐户关联。
 there-are-no-users-associated-with-this-role=没有用户与此角色关联。
 this-account-does-not-have-a-parent-account=此帐户没有父帐户。
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=此帐户没有有效域。
 this-user-does-not-belong-to-any-accounts=此用户不属于任何帐户。
 user-display-data=用户显示数据
 valid-domains=有效域
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
