--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_ar.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=تعيين منظمات إلى {0}
 assign-parent-account=تعيين حساب الأصل
 assign-users-to-x=مستخدمون معينون إلى {0}
 current-account-users=مستخدموا الحساب الحاليين
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=تصفية حسب الحسابات
 filter-by-type=تصفية حسب النوع
 for-multiple-domains,-separate-each-domain-by-a-comma=مع المجالات المتعددة، افصل كل مجال بفاصلة.
@@ -46,8 +47,10 @@ select-an-account=حدد حسابًا
 showing-users-with-valid-domains-only=إظهار المستخدمين بمجالات صالحة فقط. لعرض جميع المستخدمين، استخدم عامل تصفية لتحديث القائمة.
 tax-id=معرف الضريبة
 tax-id-help=أدخل معرف الضريبة للحساب (رقم تعريف صاحب العمل ورقم ضريبة القيمة المضافة وغيره).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=لا توجد منظمات مرتبطة بهذا الحساب.
 there-are-no-roles=لا توجد أدوار.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=لا يوجد مستخدمين مرتبطين بهذا الحساب.
 there-are-no-users-associated-with-this-role=لا يوجد مستخدمين مرتبطين بهذا الدور.
 this-account-does-not-have-a-parent-account=لا يحتوي هذا الحساب على حساب أصل.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=لا يحتوي هذا الحساب ع
 this-user-does-not-belong-to-any-accounts=هذا المستخدم لا ينتمي إلى أي حسابات.
 user-display-data=بيانات عرض المستخدم
 valid-domains=المجالات الصالحة
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
