--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_en_AU.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_en_AU.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Assign Organizations to {0} (Automatic Copy)
 assign-parent-account=Assign Parent Account (Automatic Copy)
 assign-users-to-x=Assign Users to {0} (Automatic Copy)
 current-account-users=Current Account Users (Automatic Copy)
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filter by Accounts (Automatic Copy)
 filter-by-type=Filter by Type (Automatic Copy)
 for-multiple-domains,-separate-each-domain-by-a-comma=For multiple domains, separate each domain by a comma. (Automatic Copy)
@@ -46,8 +47,10 @@ select-an-account=Select an Account (Automatic Copy)
 showing-users-with-valid-domains-only=Showing users with valid domains only. To see all users, use filter to update the list. (Automatic Copy)
 tax-id=Tax ID (Automatic Copy)
 tax-id-help=Enter the account's tax ID (EIN, VAT number, etc.). (Automatic Copy)
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=There are no organizations associated with this account. (Automatic Copy)
 there-are-no-roles=There are no roles. (Automatic Copy)
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=There are no users associated with this account. (Automatic Copy)
 there-are-no-users-associated-with-this-role=There are no users associated with this role. (Automatic Copy)
 this-account-does-not-have-a-parent-account=This account does not have a parent account. (Automatic Copy)
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=This account does not have a valid dom
 this-user-does-not-belong-to-any-accounts=This user does not belong to any accounts. (Automatic Copy)
 user-display-data=User Display Data (Automatic Copy)
 valid-domains=Valid Domains (Automatic Copy)
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
