--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_es.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Asignar organizaciones a {0}
 assign-parent-account=Asignar cuenta padre
 assign-users-to-x=Asignar usuarios a {0}
 current-account-users=Usuarios de cuenta actual
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Filtrar por cuentas
 filter-by-type=Filtrar por tipo
 for-multiple-domains,-separate-each-domain-by-a-comma=Para añadir varios dominios, sepárelos mediante comas.
@@ -46,8 +47,10 @@ select-an-account=Seleccionar una cuenta
 showing-users-with-valid-domains-only=Solo se muestran usuarios con dominios válidos. Para ver todos los usuarios, use el filtro para actualizar la lista.
 tax-id=Número de identificación fiscal
 tax-id-help=Especifique el número de identificación fiscal de la cuenta (CIF/NIF, número de IVA, etc.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=No hay ninguna organización asociada a esta cuenta.
 there-are-no-roles=No hay roles.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=No hay usuarios asociados a esta cuenta.
 there-are-no-users-associated-with-this-role=No hay usuarios asociados a este rol.
 this-account-does-not-have-a-parent-account=Esta cuenta no tiene ninguna cuenta padre.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Esta cuenta no tiene un dominio válid
 this-user-does-not-belong-to-any-accounts=Este usuario no pertenece a ninguna cuenta.
 user-display-data=Datos de visualización de usuario
 valid-domains=Dominios válidos
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
