--- a/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/account/account-admin-web/src/main/resources/content/Language_fi.properties
@@ -25,6 +25,7 @@ assign-organizations-to-x=Liitä Organisaatioita Kohteeseen {0}
 assign-parent-account=Liitä Ylätason Tili
 assign-users-to-x=Liitetetty Käyttäjille kohteessa {0}
 current-account-users=Nykyisen Tilin käyttäjät
+domain-name=Domain Name (Automatic Copy)
 filter-by-accounts=Suodata Tilien Mukaan
 filter-by-type=Suodata Tyypin perusteella
 for-multiple-domains,-separate-each-domain-by-a-comma=Useammille toimialueille erota eri toimialueet pilkulla.
@@ -46,8 +47,10 @@ select-an-account=Valitse Tili
 showing-users-with-valid-domains-only=Näytetään vain käyttäjät, joilla on kelvollinen toimialue. Nähdäksesi kaikki käyttäjät, käytä suodatinta luettelon päivittämiseen.
 tax-id=Verotunnus
 tax-id-help=Anna tilin verotunnus (EIN, ALV-numero, jne.).
+the-following-email-domains-are-shared-across-all-of-this-users-accounts=The following email domains are shared across all of this user's accounts. (Automatic Copy)
 there-are-no-organizations-associated-with-this-account=Tähän tiliin ei ole liitetty organisaatioita.
 there-are-no-roles=Rooleja ei ole.
+there-are-no-shared-email-domains-for-this-users-accounts=There are no shared email domains for this user's accounts. (Automatic Copy)
 there-are-no-users-associated-with-this-account=Tähän tiliin ei ole liitetty käyttäjiä.
 there-are-no-users-associated-with-this-role=Tähän rooliin ei ole liitetty käyttäjiä.
 this-account-does-not-have-a-parent-account=Tällä tilillä ei ole ylätason tiliä.
@@ -55,3 +58,5 @@ this-account-does-not-have-a-valid-domain=Tällä tilillä ei ole kelvollista to
 this-user-does-not-belong-to-any-accounts=Tämä käyttäjä ei kuulu millekään tilille.
 user-display-data=Käyttäjän Näyttötiedot
 valid-domains=Kelvolliset Toimialueet
+view-valid-domains=View Valid Domains (Automatic Copy)
+x-is-not-a-valid-domain-for-the-following-accounts-x={0} is not a valid domain for the following accounts: {1}. (Automatic Copy)
