--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_iw.properties
@@ -26,6 +26,7 @@ browse-by-structure=עיין לפי מבנה
 category.journal=ניהול תוכן אינטרנטי
 change-list=Change List
 changeable-default-language-description=אם התכונה מסומנת, שפת ברירת המחדל של מאמרי תוכן אינטרנטי תהיה ניתנת לשינוי. שפת ברירת המחדל של מאמרי תוכן אינטרנטי מתקבלת בירושה מהגדרות האתר.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=שינוי התבנית <strong>לא ישפיע על התבנית המקורית של תוכן אתר האינטרנט</strong> המוגדרת כברירת מחדל. <strong>השינוי חל רק על תצוגת התוכן של אתר אינטרנט זה</strong>.
 characters-blacklist=רשימה שחורה של תווים
