--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl.properties
@@ -26,6 +26,7 @@ browse-by-structure=Op structuur zoeken
 category.journal=Webcontentbeheer
 change-list=Wijzigingslijst
 changeable-default-language-description=Indien aangevinkt kan de standaardtaal van de webinhoud artikelen worden gewijzigd. De standaardtaal van de webinhoud artikelen wordt overgenomen van de site-instellingen.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=De taal wijzigen leidt niet automatisch tot vertaling van het bestaande sjabloonscript.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Wijziging van de sjabloon <strong>heeft geen invloed op standaardsjabloon van de oorspronkelijke webinhoud</strong>. <strong>De wijziging als alleen van toepassing voor de weergave van deze webinhoud</strong>.
 characters-blacklist=Zwarte lijst tekens
