--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_pt_PT.properties
@@ -26,6 +26,7 @@ browse-by-structure=Navegar por estrutura
 category.journal=Gestão de Conteúdos Web
 change-list=Change List
 changeable-default-language-description=Se selecionado, a língua por omissão para artigos de conteúdo web será alterável. A língua por omissão de artigos de conteúdo web é herdada das definições do site.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=Characters Blacklist
