--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ca.properties
@@ -26,6 +26,7 @@ browse-by-structure=Navega per estructura
 category.journal=Gestió de continguts web
 change-list=Llista de canvis
 changeable-default-language-description=Si es marca, es podrà modificar l'idioma per defecte dels articles de contingut web. L'idioma per defecte dels articles de contingut web s'hereta de la configuració del lloc.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=En canviar l'idioma, l'script de plantilla existent no es tradueix automàticament.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Canviar la plantilla <strong>no afectarà la plantilla predeterminada del contingut web original</strong>. <strong>El canvi només afectarà aquesta visualització de contingut web</strong>.
 characters-blacklist=Llista negra de caràcters
