--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_fa.properties
@@ -26,6 +26,7 @@ browse-by-structure=جستجو با ساختار
 category.journal=مدیریت محتوای وب
 change-list=تغییر لیست
 changeable-default-language-description=اگر چک شده است. زبان پیش‌فرض مقالات قابل تغییر خواهد بود. زبان پیش‌فرض مقالات از تنظیمات سایت می‌آید.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=لیست سیاه کاراکترها
