--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_ja.properties
@@ -26,6 +26,7 @@ browse-by-structure=ストラクチャーで閲覧
 category.journal=Webコンテンツ管理
 change-list=変更リスト
 changeable-default-language-description=チェックされている場合、Webコンテンツ記事のデフォルト言語は変更可能です。Webコンテンツ記事のデフォルト言語はサイト設定から継承されます。
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=言語を変更しても、既存のテンプレートスクリプトが自動的に翻訳されることはありません。
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=テンプレートの変更は <strong>デフォルトのWeb コンテンツに影響を与えることはありません。</strong><strong>変更は、この web コンテンツ表示にのみ適用されます。</strong>
 characters-blacklist=ブラックリストに追加された文字
