--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nb.properties
@@ -26,6 +26,7 @@ browse-by-structure=Ble gjennom ordnet etter struktur
 category.journal=Innholdsadministrasjon
 change-list=Endringsliste
 changeable-default-language-description=Dersom valgt vil det være mulig å endre standardspråket til webinnholdsartikler. Standardspråket til webinnholdsartikler arves fra nettstedsinnstillingene.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Endring av språk vil ikke automatisk oversette eksisterende malskript.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Endring av malen vil ikke påvirke den originale standardmalen for webinnhold. Endringen gjelder bare denne webinnholdsvisningen.
 characters-blacklist=Svartelistede tegn
