--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_nl_BE.properties
@@ -26,6 +26,7 @@ browse-by-structure=Op structuur zoeken
 category.journal=Web Content
 change-list=Change List
 changeable-default-language-description=Indien aangevinkt kan de standaardtaal van de webinhoud artikelen worden gewijzigd. De standaardtaal van de webinhoud artikelen wordt overgenomen van de site-instellingen.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Changing the language does not automatically translate the existing template script.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Changing the template will not affect the original web content default template. The change only applies to this web content display.
 characters-blacklist=Characters Blacklist
