--- a/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/journal/journal-lang/src/main/resources/content/Language_sv.properties
@@ -26,6 +26,7 @@ browse-by-structure=Bläddra efter struktur
 category.journal=Artikelhantering
 change-list=Ändringslista
 changeable-default-language-description=Om detta markeras kan standardspråket för webbinnehållsartiklar ändras. Standardspråket för webbinnehållsartiklar ärvs från webbplatsinställningarna.
+changing-the-friendly-url-will-affect-all-web-content-article-versions,-even-when-saving-it-as-draft=Changing the friendly URL will affect all web content article versions, even when saving it as draft. (Automatic Copy)
 changing-the-language-does-not-automatically-translate-the-existing-template-script=Ändring av språket översätter inte automatiskt den befintliga malltexten.
 changing-the-template-will-not-affect-the-original-web-content-defautl-template.-the-change-only-applies-to-this-web-content-display=Ändring av mallen <strong>påverkar inte det ursprungliga webbinnehållets</strong> standardmall. <strong>Ändringen gäller bara för visningen av det här webbinnehållet</strong>.
 characters-blacklist=Svartlista för tecken
